1. Have integrated the play pause logic in instagram feed sections 2. Have worked and completed the design corrections in instagram feed section and fixed it's responsive issues 3. Fixed the git issues #17 - Align Product details in cart 4. Fixed the git issues #31 - Menu items in iOS device

--- a/src/styles.css
+++ b/src/styles.css
@@ -12271,12 +12271,13 @@ letter-spacing: 2px;
       background-color: transparent;
   }
   .mobile-cart .product-thumbnail {
-    width: 100%;
-    height: 108px;
+    /* width: 100%;
+    height: 108px; */
     margin-bottom: 10px;
   }
   .mobile-cart .close-thik {
-    left: 13px;
+    /* left: 13px; */
+    left: 17px;
 }
   .mobile-cart .cart-p-td {
     justify-content: start !important;
@@ -12684,7 +12685,7 @@ letter-spacing: 2px;
     .order-pro-img {
         width: 100%;
     }
-    .mobile-cart {display: block;}
+    .mobile-cart {display: table;}
     .desktop-cart {display: none;}
     .progress-bg {
         height: 70vh;
@@ -12711,9 +12712,9 @@ letter-spacing: 2px;
     .cart-scroll .col-lg-6{
         width: 66%;
     }
-    .cart-p-td {
+    /* .cart-p-td {
         width:150px;
-    }
+    } */
     .close-thik {}
     .rev-user-name h6 {
         display: block !important;
@@ -13932,4 +13933,123 @@ margin: 0 0 12px;
     left: 0px;
     right: 0;
 }
+}
+
+.prod-det-wrapper .product__image{
+    padding: 15px 10px 0!important;
+}
+
+.mobile-cart .pro-details{
+    width: auto;
+}
+
+
+.px-15{
+    padding: 0 15px;
+}
+
+.insta-col{
+    padding: 5px;
+}
+
+.insta-col, .insta-post, .insta-box{
+	aspect-ratio: 1 / 1;
+}
+
+.insta-box img, .insta-box video {
+	object-fit: cover;
+	height: 100%;
+	max-height: 100%;
+}
+
+.insta-video-play-button {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    box-sizing: initial;
+    display: block!important;
+    width: 32px;
+    height: 44px;
+    border-radius: 50%;
+    padding: 18px 20px 18px 28px;
+    background-color: #fff;
+}
+.insta-video-play-button:after, .insta-video-play-button:before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-50%) translateY(-50%);
+	-webkit-transform: translateX(-50%) translateY(-50%);
+	-ms-transform: translateX(-50%) translateY(-50%);
+    display: block;
+    width: 80px;
+    height: 80px;
+    background: #ebcc00;
+    border-radius: 50%;
+}
+.insta-video-play-button:before {
+    z-index: 0;
+	-webkit-animation: pulse-border 1.5s cubic-bezier(.767, .01, .18, 1.01) infinite;
+    animation: pulse-border 1.5s cubic-bezier(.767,.01,.18,1.01) infinite;
+}
+.insta-video-play-button:after {
+    z-index: 1;
+}
+.insta-video-play-button span {
+    display: block;
+    position: relative;
+    z-index: 3;
+    width: 0;
+    height: 0;
+    border-left: 32px solid #fff;
+    border-top: 22px solid transparent;
+    border-bottom: 22px solid transparent;
+}
+.insta-video-play-button span.pauseBtn {
+    margin-top: 5px;
+    position: relative;
+    z-index: 3;
+    width: 35px;
+    height: 35px;
+    border-style: double;
+    border-width: 0px 0px 0px 25px;
+    border-color: #fff;
+}
+
+@media (min-width: 768px) and (max-width: 991px) { 
+    .insta-video-play-button{
+        padding: 10px;
+        height: 32px;
+    }
+
+    .insta-video-play-button:after, .insta-video-play-button:before {
+        width: 52px;
+        height: 52px;
+    }
+
+    .insta-video-play-button span {
+        border-left: 16px solid #fff;
+        border-top: 11px solid transparent;
+        border-bottom: 11px solid transparent;
+        margin-left: 10px;
+        margin-top: 5px;
+    }
+
+    .insta-video-play-button span.pauseBtn {
+        height: 20px;
+        border-style: double;
+        border-width: 0px 0px 0px 15px;
+        margin-left: 8px;
+        margin-top: 5px;
+    }
+}
+
+@supports (-webkit-touch-callout: none) {
+    /* CSS specific to iOS devices */ 
+    .dropdown .nav-btn {
+        pointer-events: unset;
+    }
 }
